# ghcid-mcp

./: .gitignore  Cargo.toml  LICENSE  README.md  claude-desktop-config.json  flake.nix  install.sh  justfile  test_mcp.sh  treefmt.toml
.serena/: project.yml
scripts/: verify-install.sh
src/: logger.rs  main.rs  server.rs  test_client.rs
