[package]
name = "ghcid-mcp"
version = "0.1.0"
edition = "2024"
default-run = "ghcid-mcp"
description = "A simple Model Context Protocol (MCP) server with echo tool"
repository = "https://github.com/Aerma7309/ghcid-mcp"
license = "MIT"
authors = ["Your Name <your.email@example.com>"]
keywords = ["mcp", "model-context-protocol", "ai", "tools"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
rmcp = { version = "0.3.2", default-features = true }
rmcp-macros = "0.3.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = { version = "0.8", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "json"] }
axum = { version = "0.8.4", features = ["tokio"] }

[[bin]]
name = "ghcid-mcp"
path = "src/main.rs"
