[package]
name = "ghcid-mcp"
version = "0.1.0"
edition = "2024"
default-run = "ghcid-mcp"
description = "A Model Context Protocol (MCP) server for Haskell compilation checking - helps AI agents get real-time feedback on Haskell project compilation status and errors"
repository = "https://github.com/Aerma7309/ghcid-mcp"
license = "MIT"
authors = ["aerma7309@gmail.com"]
keywords = [
  "mcp",
  "model-context-protocol",
  "haskell",
  "ghc",
  "compilation",
  "ai-tools",
  "development",
]
categories = ["command-line-utilities", "development-tools", "compilers"]

[dependencies]
rmcp = { version = "0.1" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = { version = "0.8", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
tracing-appender = "0.2"
thiserror = "1.0"
ghciwatch = "1.1"

[[bin]]
name = "ghcid-mcp"
path = "src/main.rs"
